# control_library

./: .gitignore  README.md  library.json
.github/workflows/: ci.yml
docs/: getting-started.md  use-pll.md  use-pr.md  use-rst.md
src/: control_factory.cpp  control_factory.h  controller.h  factory.cpp  factory.h  filters.cpp  filters.h  fir.cpp  fir.h  lib.conf  pid.cpp  pid.h  pr.cpp  pr.h  rst.cpp  rst.h  transform.cpp  transform.h  trigo.cpp  trigo.h
tests/: CMakeLists.txt  debug_native_posix.sh  prj.conf  test_native.sh  test_nucleo.sh  testcase.yaml
tests/src/: data_test_pr.h  datas_test_lowpass1st.h  datas_test_notch_filter.h  datas_test_pid_standard.h  datas_test_rst.h  datas_test_trigo.h  main.cpp  pll_data_test.h  test_filters.cpp  test_transform.cpp
